# k8s-keycloak-oidc-translator

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: publish-docker.yml  testing.yml
example/api/: Dockerfile  go.mod  go.sum  main.go
example/app/: Dockerfile  go.mod  go.sum  main.go
hack/: envoy-config.api.yaml  envoy-config.app.yaml  translator-realm.json
old/: docker-compose.yml  go.mod  main.go
old/example/app/: Dockerfile  go.mod
old/example/app/templates/: authed.html  index.html
old/hack/: envoy-config.api.yaml  envoy-config.app.yaml
old/user_repository/: user_repository.go
src/: main.rs  provider.rs
