[package]
name = "k8s-oidc-token-exchange-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive", "env"] }
env_logger = "0.9.0"
log = "0.4.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
wirepact-translator = { git = "https://github.com/WirePact/rust-translator.git", tag = "v1.0.1" }
