[package]
name = "k8s-token-exchange-translator"
version = "0.0.0-development"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive", "env"] }
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
wirepact-translator = { git = "https://github.com/WirePact/rust-translator.git", tag = "v1.0.2" }
